force-app/main/default/objects/CLQ_County__c/CLQ_County__c.object-meta.xml
<CustomObject>
    <description>List of OH county a Organization/Program can operate from</description>
    <label>County</label>
    <nameField>
        <label>County Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Counties</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>