force-app/main/default/objects/CLQ_County__c/fields/CCC_Field_Officers__c.field-meta.xml
<CustomField>
    <fullName>CCC_Field_Officers__c</fullName>
    <label>CCC Field Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VDSS/CENTRAL LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/PIEDMONT LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS_CHILD_WELFARE_LICENSING</fullName>
                <label>VDSS/CHILD_WELFARE_LICENSING</label>
            </value>
            <value>
                <fullName>VDSS/PENINSULA LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/EASTERN LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/VALLEY LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/FAIRFAX LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/WESTERN LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/NORTHERN LICENSING OFFICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>