force-app/main/default/objects/CLQ_County__c/fields/FCC_Field_officers__c.field-meta.xml
<CustomField>
    <fullName>FCC_Field_officers__c</fullName>
    <label>FCC Field Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VDSS/CENTRAL LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/PIEDMONT LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/CHILD WELFARE LICENSING UNIT</fullName>
            </value>
            <value>
                <fullName>VDSS/PENINSULA LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/EASTERN LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/VALLEY LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/FAIRFAX LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/WESTERN LICENSING OFFICE</fullName>
            </value>
            <value>
                <fullName>VDSS/NORTHERN LICENSING OFFICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>