force-app/main/default/objects/CLQ_County__c/fields/Supervisor_Group__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Group__c</fullName>
    <inlineHelpText>Exact name of public group of supervisors responsible for this county</inlineHelpText>
    <label>Supervisor Group</label>
    <length>128</length>
    <type>Text</type>
</CustomField>