force-app/main/default/objects/CLQ_County__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FCC_Field_officers__c</columns>
    <columns>CCC_Field_Officers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>